--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.19.0
+  firebase_core: ^3.5.0
 
 dev_dependencies:
   flutter_test:
@@ -61,14 +63,23 @@ flutter:
   assets:
     - assets/images/
   fonts:
-    - family: Matemasie
-      fonts:
-        - asset: assets/fonts/Matemasie-Regular.ttf
     - family: Montserrat
       fonts:
         - asset: assets/fonts/Montserrat-Regular.ttf
+          weight: 200
+        - asset: assets/fonts/Montserrat-Medium.ttf
           weight: 400
         - asset: assets/fonts/Montserrat-SemiBold.ttf
           weight: 600
         - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 900
+    - family: PlusJakartaSans
+      fonts:
+        - asset: assets/fonts/PlusJakartaSans-Regular.ttf
+          weight: 200
+        - asset: assets/fonts/PlusJakartaSans-Medium.ttf
+          weight: 400
+        - asset: assets/fonts/PlusJakartaSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/PlusJakartaSans-Bold.ttf
           weight: 900
