--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
   firebase_core: ^3.5.0
+  bulleted_list: ^0.0.1+0.1a
+  carousel_slider: ^5.0.0
+  font_awesome_flutter: ^10.7.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
