--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^5.0.0
   font_awesome_flutter: ^10.7.0
   auto_size_text: ^3.0.0
+  flutter_markdown: ^0.7.3+2
 
 dev_dependencies:
   flutter_test:
